--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -1,12 +1,12 @@
 ﻿<div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">Osiris</a>
+    <a class="navbar-brand font-weight-bold text-uppercase" href="">Osiris</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
 </div>
 
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
-    <ul class="nav flex-column">
+    <ul class="nav flex-column text-uppercase">
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
                 <span class="oi oi-home" aria-hidden="true"></span> Home
@@ -20,6 +20,21 @@
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="fetchdata">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="user">
+                <span class="oi oi-list" aria-hidden="true"></span> User
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="projects">
+                <span class="oi oi-list" aria-hidden="true"></span> Project
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="company">
+                <span class="oi oi-list" aria-hidden="true"></span> Company
             </NavLink>
         </li>
     </ul>
