--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -10,8 +10,8 @@ a, .btn-link {
 
 .btn-primary {
     color: #fff;
-    background-color: #1b6ec2;
-    border-color: #1861ac;
+    background-color: #26b050;
+    border-color: none;
 }
 
 .content {
