--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -29,7 +29,7 @@
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="projects">
-                <span class="oi oi-list" aria-hidden="true"></span> Project
+                <span class="oi oi-list" aria-hidden="true"></span> Projects
             </NavLink>
         </li>
         <li class="nav-item px-3">
