--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -5,13 +5,52 @@ html, body {
 }
 
 a, .btn-link {
-    color: #0366d6;
+    color: #16C79A;
 }
 
-.btn-primary {
+.button:hover {
+    background-color: #16B990;
+    color: #ffffff;
+    text-decoration: none;
+}
+
+.btn-main {
     color: #fff;
-    background-color: #26b050;
-    border-color: none;
+    background-color: #16C79A;
+    border: none;
+    display: inline-block;
+    font-weight: 400;
+    padding: 0.375rem 0.75rem;
+    border-radius: 0.25rem;
+    text-decoration: none;
+}
+
+.btn-outlined {
+    color: #000;
+    background-color: #fff;
+    border: 1px solid #16C79A;
+    display: inline-block;
+    font-weight: 400;
+    padding: 0.375rem 0.75rem;
+    border-radius: 0.25rem;
+    text-decoration: none;
+}
+
+.btn-remove {
+    color: #fff;
+    background-color: #C81912;
+    border: none;
+    display: inline-block;
+    font-weight: 400;
+    padding: 0.375rem 0.75rem;
+    border-radius: 0.25rem;
+    text-decoration: none;
+}
+
+.btn-remove:hover {
+    background-color: #B91710;
+    color: #ffffff;
+    text-decoration: none;
 }
 
 .content {
@@ -48,3 +87,40 @@ a, .btn-link {
         right: 0.75rem;
         top: 0.5rem;
     }
+
+/* card */
+.osiris-card {
+    width: 18rem;
+    background-color: #151B26;
+    color: #ffffff;
+    padding: 25px;
+    border-radius: 20px;
+}
+
+.loading-container {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: block;
+    background: #2a2a2a55;
+    transform: translateY(-50%);
+    z-index: 1000;
+}
+
+.loading-overlay {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.5);
+}
+
+.spinner-grow {
+    display: block;
+    top: 45%;
+    position: fixed;
+    right: 50%;
+    background: #16C79A;
+}
+
