--- a/Pages/Projects/ProjectCreate.razor
+++ b/Pages/Projects/ProjectCreate.razor
@@ -2,17 +2,16 @@
 @inject ProjectService projectService
 @inject NavigationManager NavigationManager
 
-<div class="modal fade show" id="myModal" style="display:block; background-color: rgba(10,10,10,.8);" aria-modal="true" role="dialog">
+<div class="modal fade show" id="projectCreateModal" style="display:block; background-color: rgba(10,10,10,.8);" aria-modal="true" role="dialog">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <h4 class="modal-title">Create New Project</h4>
-                <button type="button" class="close" @onclick="@ModalCancel">&times;</button>
             </div>
+
             <EditForm Model="projectObject" OnValidSubmit="@ModalOk">
                 <div class="modal-body">
                     <DataAnnotationsValidator />
-
                     <div class="form-group">
                         <label for="Name" class="control-label">Name</label>
                         <InputText @bind-Value="projectObject.Name"></InputText>
@@ -44,7 +43,6 @@
 @code {
     [Parameter]
     public EventCallback<Boolean> OnClose { get; set; }
-
     Project projectObject = new Project();
 
     private Task ModalCancel()
