--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -125,26 +125,24 @@ a, .btn-link {
     background: #16C79A;
 }
 
+/* Section */
 .section-title {
     display: inline-flex;
 }
 
 .section {
-    display: inline-block;
+    display: table-cell;
 }
 
 .osiris-section-card {
     width: 285px;
     background-color: transparent;
+    border: 1px solid #151B26;
     color: #000000;
     padding: 25px;
-    border-radius: 20px;
+    border-radius: 8px;
     display: block;
     white-space: normal;
-}
-
-.osiris-section-card:hover {
-    border: 1px solid #151B26;
 }
 
 .task-name {
@@ -153,9 +151,14 @@ a, .btn-link {
 
 .scrollmenu {
     overflow-x: scroll;
-    overflow-y: hidden;
+    overflow-y: hidden; 
     white-space: nowrap;
     width: 1024px;
+}
+
+/* icon styles */
+.oi {
+    color: #a2a0a2;
 }
 
 .oi-pencil:hover {
@@ -168,4 +171,39 @@ a, .btn-link {
 
 .oi-delete:hover {
     color: #C81912;
+}
+
+.oi-circle-x:hover {
+    color: #C81912;
+}
+
+.oi-external-link:hover {
+    color: #16C79A;
+}
+
+/* Ticket */
+.ticket-container {
+    overflow-x: hidden;
+    overflow-y: scroll;
+    white-space: nowrap;
+    height: 55vh;
+    margin-right: -20px;
+}
+
+.ticket {
+    width: 231px;
+    background-color: #ffffff;
+    color: #000000;
+    padding: 25px;
+    border-radius: 8px;
+    display: block;
+    white-space: normal;
+}
+
+.ticket:hover {
+    border: 1px solid #16C79A;
+}
+
+.ticket-title {
+    word-break: break-word;
 }
