--- a/Pages/Projects/ProjectCreate.razor
+++ b/Pages/Projects/ProjectCreate.razor
@@ -1,7 +1,26 @@
 ﻿@using Osiris.Data
 @inject ProjectService projectService
+@inject CompanyService companyService
 @inject NavigationManager NavigationManager
 
+@if (companyListObj is null)
+{
+    <LoadingSpinner />
+}
+else if (companyListObj.Count == 0)
+{
+    <div class="modal fade show" id="projectCreateModal" style="display:block; background-color: rgba(10,10,10,.8);" aria-modal="true" role="dialog">
+        <div class="error-card">
+            <div class="d-flex justify-content-center mb-5">
+                <div class="oi oi-x" />
+            </div>   
+            <div class="mb-3">Please add a company to insert project</div>
+            <button class="button btn-main" @onclick="OnAddCompanyDialog">Company Page</button>
+        </div>
+    </div>
+}
+else
+{
 <div class="modal fade show" id="projectCreateModal" style="display:block; background-color: rgba(10,10,10,.8);" aria-modal="true" role="dialog">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -29,6 +48,16 @@
                             <option value="Incomplete">Incomplete</option>
                         </InputSelect>
                     </div>
+                    <div class="form-group">
+                        <label for="Company" class="control-label">Company</label>
+                        <InputSelect @bind-Value="@projectObject.CompanyId" required>
+                            @foreach (var company in companyListObj)
+                                {
+                                <option value="@company.CompanyId">@company.Name</option>
+                                }
+                        </InputSelect>
+                        <ValidationMessage For="@(() => projectObject.CompanyId)" />
+                    </div>
                 </div>
 
                 <div class="modal-footer">
@@ -39,11 +68,25 @@
         </div>
     </div>
 </div>
+}
+
 
 @code {
     [Parameter]
     public EventCallback<Boolean> OnClose { get; set; }
+
+    List<Company> companyListObj;
     Project projectObject = new Project();
+
+    private async Task loadData()
+    {
+        companyListObj = await Task.Run(() => companyService.GetAllCompaniesAsync());
+        StateHasChanged();
+    }
+    protected override async Task OnInitializedAsync()
+    {
+        await loadData();
+    }
 
     private Task ModalCancel()
     {
@@ -54,5 +97,10 @@
     {
         var result = await projectService.AddProjectAsync(projectObject);
         await OnClose.InvokeAsync(true);
+    }
+
+    private void OnAddCompanyDialog()
+    {
+        NavigationManager.NavigateTo("/Company");
     }
 }
