--- a/Pages/Projects/ProjectView.razor
+++ b/Pages/Projects/ProjectView.razor
@@ -1,4 +1,4 @@
-﻿@page "/project/project-view/{Id}/"
+﻿@page "/project/project-view/{ProjectId}/"
 @using Osiris.Data
 @inject ProjectService projectService
 @inject NavigationManager NavigationManager
@@ -13,8 +13,8 @@ else
     <p>@projectObject.Description</p>
     <p>@projectObject.ProjectId</p>
 
-    <button type="button" class="btn-remove" @onclick="() => OnOpenDeleteDialog()">Delete</button>
-    <button type="button" class="btn-outlined" @onclick="() => OnOpenEditDialog()">Edit</button>
+    <button type="button" class="btn-remove" @onclick="() => OnOpenProjectDeleteDialog()">Delete</button>
+    <button type="button" class="btn-outlined" @onclick="() => OnOpenProjectEditDialog()">Edit</button>
     <a class="btn-outlined" href="/project/project-view/@projectObject.ProjectId/section-board">Section</a>
 
     @if (OpenDeleteDialog)
@@ -22,23 +22,23 @@ else
         <ModalDeleteDialog Title="Are you sure ?"
                            Text="@projectObject.Name"
                            ButtonName="Delete"
-                           OnClose="@OnProjectDeleteDialog" />
+                           OnClose="@DeleteProject" />
     }
     @if (OpenUpdateDialog)
     {
-        <ProjectUpdate OnClose="@(OnCancelUpdateDialog)" RetrievedData="@projectObject.ProjectId.ToString()" />
+        <ProjectUpdate OnClose="@(UpdateProject)" RetrievedData="@projectObject.ProjectId.ToString()" />
     }
 }
 
 @code {
     [Parameter]
-    public String Id { get; set; }
+    public String ProjectId { get; set; }
     Project projectObject = new Project();
     Boolean isLoaded = false;
 
     private async Task loadData()
     {
-        projectObject = await Task.Run(() => projectService.GetProjectAsync(Id));
+        projectObject = await Task.Run(() => projectService.GetProjectAsync(ProjectId));
         StateHasChanged();
     }
     protected override async Task OnInitializedAsync()
@@ -49,9 +49,15 @@ else
 
     /* Modal Logic */
 
-    /* Modal Project Deletion Logic */
+    /* Project Modal Logic */
+    /* Project Delete Logic */
     public Boolean OpenDeleteDialog { get; set; }
-    private async Task OnProjectDeleteDialog(Boolean accepted)
+    private void OnOpenProjectDeleteDialog()
+    {
+        OpenDeleteDialog = true;
+        StateHasChanged();
+    }
+    private async Task DeleteProject(Boolean accepted)
     {
         if (accepted)
         {
@@ -61,20 +67,15 @@ else
         OpenDeleteDialog = false;
         StateHasChanged();
     }
-    private void OnOpenDeleteDialog()
-    {
-        OpenDeleteDialog = true;
-        StateHasChanged();
-    }
 
-    /* Modal Project Update Logic */
+    /* Project Update Logic */
     public Boolean OpenUpdateDialog { get; set; }
-    private void OnOpenEditDialog()
+    private void OnOpenProjectEditDialog()
     {
         OpenUpdateDialog = true;
         StateHasChanged();
     }
-    private async Task OnCancelUpdateDialog(Boolean accepted)
+    private async Task UpdateProject(Boolean accepted)
     {
         if (accepted)
         {
