--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -33,7 +33,7 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="company">
+            <NavLink class="nav-link" href="companies">
                 <span class="oi oi-list" aria-hidden="true"></span> Company
             </NavLink>
         </li>
