--- a/Pages/Projects/ProjectCreate.razor
+++ b/Pages/Projects/ProjectCreate.razor
@@ -1,6 +1,7 @@
 ﻿@using Osiris.Data
 @inject ProjectService projectService
 @inject CompanyService companyService
+@inject UserService userService
 @inject NavigationManager NavigationManager
 
 @if (companyListObj is null)
